--- a/Office_work_12_03_2025/index.html
+++ b/Office_work_12_03_2025/index.html
@@ -42,12 +42,14 @@
           <p class="text-xs font-semibold text-gray-600 mb-1">Add tags (Press enter or comma):</p>
           <ul>
             <li id="tagBox" class="flex flex-wrap p-2 border rounded-md border-[#86efac] bg-[#f0fdf4] min-h-[40px] items-center">
-              <input placeholder="," id="tagInput" type="text" spellcheck="false" class="flex-1 p-0 m-0 outline-none bg-transparent w-full text-sm text-[#14532d] min-w-[50px]">
+              <input placeholder="," id="tagInput" type="text" spellcheck="false" class="flex-1 p-0 m-0 outline-none bg-transparent w-full text-sm text-[#14532d] min-w-[50px]" autocomplete="off">
             </li>
           </ul>
           <div class="flex justify-between mt-1 items-center">
             <span id="tagCount" class="text-xs text-gray-500">20 tags remaining</span>
           </div>
+          <div id="tagSuggestions" class="tag-suggestions"></div>
+
         </div>
         <div  class="flex flex-col space-y-3  w-full relative bottom-7 ">
           <div id="select1" class="flex flex-col relative">
@@ -99,7 +101,7 @@
  </div>
  
  <div id="resultContainer" 
-class="flex flex-wrap justify-center lg:justify-start items-start gap-3 w-full p-4  lg:mr-[370px]">
+class="flex flex-wrap justify-center lg:justify-start items-start gap-3 w-full p-4 lg:mr-[370px]">
  </div>
 
 </div>
