--- a/Office_work_12_03_2025/index.html
+++ b/Office_work_12_03_2025/index.html
@@ -107,7 +107,7 @@ class=" space-y-2">
 
 </div>
 
-<div id="hubsoptt" class="  relative flex flex-col justify-start items-center mt-2 mr-[53px] ">
+<div id="hubsoptt" class="  relative flex flex-col justify-start items-center mt-2 lg:mr-[53px] ">
 <form id="hubspotForm" 
       class="form_back  gap-2 rounded-2xl p-4
            bg-gradient-to-br from-[#ffffff] via-[#e8faff] to-[#f5fff3]
