body color change

--- a/Office_work_12_03_2025/index.html
+++ b/Office_work_12_03_2025/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
-<body class=" m-0 p-0  flex justify-start items-center bg-black">
+<body class=" m-0 p-0  flex justify-start items-center bg-gradient-to-br from-[#fff0f5] via-[#e0f7ff] to-[#e8ffe0]">
 
 <div id="toast-container" class="fixed top-5 right-5 space-y-2 z-50"></div>
 <div id="full" class="w-full relative m-2 grid lg:grid-cols-[1fr_1.6fr] 2xl:grid-cols-[1fr_8fr] gap-3">
